--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "brunch-react-es6-backend-scaffold",
-  "description": "brunch+React/ES6 backend scaffold",
+  "name": "webpack-react-es6-backend-scaffold",
+  "description": "webpack+React/ES6 backend scaffold",
   "author": "Joan R. Bellido",
   "version": "0.0.1",
   "repository": {
@@ -8,23 +8,18 @@
     "url": ""
   },
   "scripts": {
-    "start": "brunch watch --server",
-    "prod": "brunch build --production"
+    "start": "webpack watch --colors"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
-    "auto-reload-brunch": "^2.0.0",
-    "babel-brunch": "~6.0.0",
-    "babel-preset-es2015": "~6.3.13",
-    "brunch": "^2.4.0",
-    "clean-css-brunch": "^2.0.0",
-    "css-brunch": "^2.0.0",
-    "javascript-brunch": "^2.0.0",
-    "uglify-js-brunch": "^2.0.0",
+    "babel-core": "^6.9.1",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.5.0",
     "node-sass": "^3.7.0",
     "react": "15.1.0",
     "react-dom": "15.1.0",
-    "babel-preset-react": "6.5.0"
+    "sass-loader": "^3.2.0",
+    "webpack": "^1.13.1"
   }
 }
