--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "url": ""
   },
   "scripts": {
-    "start": "webpack watch --colors"
+    "watch": "webpack -w -d"
   },
   "dependencies": {},
   "devDependencies": {
