--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "webpack+React/ES6 backend scaffold",
   "author": "Joan R. Bellido",
   "version": "0.0.1",
+  "main": "server.js",
   "repository": {
     "type": "git",
     "url": ""
@@ -10,12 +11,20 @@
   "scripts": {
     "watch": "webpack -w -d"
   },
-  "dependencies": {},
+  "dependencies": {
+    "express": "^4.13.4",
+    "handlebars": "^4.0.5",
+    "koa": "^1.2.0",
+    "koa-static": "^2.0.0"
+  },
   "devDependencies": {
     "babel-core": "^6.9.1",
+    "babel-eslint": "^6.0.4",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.5.0",
+    "eslint": "^2.11.1",
+    "eslint-loader": "^1.3.0",
     "node-sass": "^3.7.0",
     "react": "15.1.0",
     "react-dom": "15.1.0",
