Remove ununsed dependencies

--- a/package.json
+++ b/package.json
@@ -12,10 +12,7 @@
     "watch": "webpack -w -d"
   },
   "dependencies": {
-    "express": "^4.13.4",
-    "handlebars": "^4.0.5",
-    "koa": "^1.2.0",
-    "koa-static": "^2.0.0"
+    "express": "^4.13.4"
   },
   "devDependencies": {
     "babel-core": "^6.9.1",
