--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
     "watch": "webpack -w -d"
   },
   "dependencies": {
-    "express": "^4.13.4"
+    "express": "^4.13.4",
+    "react-router": "^2.4.1"
   },
   "devDependencies": {
+    "babel-cli": "^6.9.0",
     "babel-core": "^6.9.1",
     "babel-eslint": "^6.0.4",
     "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
     "eslint": "^2.11.1",
     "eslint-loader": "^1.3.0",
