--- a/package.json
+++ b/package.json
@@ -12,8 +12,18 @@
     "watch": "webpack -w -d"
   },
   "dependencies": {
+    "axios": "^0.12.0",
+    "babel": "^6.5.2",
     "express": "^4.13.4",
-    "react-router": "^2.4.1"
+    "express-hbs": "^1.0.1",
+    "handlebars": "^4.0.5",
+    "history": "^3.0.0",
+    "immutable": "^3.8.1",
+    "object-assign": "^4.1.0",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.4.1",
+    "redux": "^3.5.2",
+    "webpack-dev-server": "^1.14.1"
   },
   "devDependencies": {
     "babel-cli": "^6.9.0",
@@ -21,6 +31,7 @@
     "babel-eslint": "^6.0.4",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
+    "babel-preset-es2016": "^6.0.11",
     "babel-preset-react": "^6.5.0",
     "eslint": "^2.11.1",
     "eslint-loader": "^1.3.0",
