--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "author": "Joan R. Bellido",
   "version": "0.0.1",
   "main": "server.js",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": ""
@@ -11,21 +12,11 @@
   "scripts": {
     "watch": "webpack -w -d"
   },
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
+    "autoprefixer-loader": "^3.2.0",
     "axios": "^0.12.0",
     "babel": "^6.5.2",
-    "express": "^4.13.4",
-    "express-hbs": "^1.0.1",
-    "handlebars": "^4.0.5",
-    "history": "^3.0.0",
-    "immutable": "^3.8.1",
-    "object-assign": "^4.1.0",
-    "react-redux": "^4.4.5",
-    "react-router": "^2.4.1",
-    "redux": "^3.5.2",
-    "webpack-dev-server": "^1.14.1"
-  },
-  "devDependencies": {
     "babel-cli": "^6.9.0",
     "babel-core": "^6.9.1",
     "babel-eslint": "^6.0.4",
@@ -33,12 +24,27 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-es2016": "^6.0.11",
     "babel-preset-react": "^6.5.0",
+    "browser-sync": "^2.12.10",
+    "browser-sync-webpack-plugin": "^1.0.2",
+    "css-loader": "^0.23.1",
     "eslint": "^2.11.1",
     "eslint-loader": "^1.3.0",
+    "express": "^4.13.4",
+    "express-hbs": "^1.0.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "handlebars": "^4.0.5",
+    "history": "^3.0.0",
+    "immutable": "^3.8.1",
     "node-sass": "^3.7.0",
+    "object-assign": "^4.1.0",
     "react": "15.1.0",
     "react-dom": "15.1.0",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.4.1",
+    "redux": "^3.5.2",
     "sass-loader": "^3.2.0",
-    "webpack": "^1.13.1"
+    "style-loader": "^0.13.1",
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1"
   }
 }
