--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,4 @@
 {
-  "presets": ["es2015", "es2016", "react"]
+  "presets": ["es2015", "es2016", "react"],
+  "plugins":  ["transform-decorators-legacy", "transform-class-properties", "transform-object-rest-spread"]
 }
