--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   "scripts": {
     "watch": "webpack -w -d"
   },
-  "dependencies": {},
+  "dependencies": {
+    "babel-plugin-transform-class-properties": "^6.9.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-object-rest-spread": "^6.8.0"
+  },
   "devDependencies": {
     "autoprefixer-loader": "^3.2.0",
     "axios": "^0.12.0",
