--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-preset-react": "^6.5.0",
     "browser-sync": "^2.12.10",
     "browser-sync-webpack-plugin": "^1.0.2",
+    "bunyan": "^1.8.1",
     "css-loader": "^0.23.1",
     "eslint": "^2.11.1",
     "eslint-loader": "^1.3.0",
