--- a/package.json
+++ b/package.json
@@ -13,9 +13,6 @@
     "watch": "webpack -w -d"
   },
   "dependencies": {
-    "babel-plugin-transform-class-properties": "^6.9.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-object-rest-spread": "^6.8.0"
   },
   "devDependencies": {
     "autoprefixer-loader": "^3.2.0",
@@ -52,6 +49,9 @@
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1",
-    "winston": "^2.2.0"
+    "winston": "^2.2.0",
+    "babel-plugin-transform-class-properties": "^6.9.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-object-rest-spread": "^6.8.0"
   }
 }
