--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "scripts": {
     "watch": "webpack -w -d"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "autoprefixer-loader": "^3.2.0",
     "axios": "^0.12.0",
@@ -22,6 +21,9 @@
     "babel-core": "^6.9.1",
     "babel-eslint": "^6.0.4",
     "babel-loader": "^6.2.4",
+    "babel-plugin-transform-class-properties": "^6.9.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-es2016": "^6.0.11",
     "babel-preset-react": "^6.5.0",
@@ -37,6 +39,7 @@
     "handlebars": "^4.0.5",
     "history": "^3.0.0",
     "immutable": "^3.8.1",
+    "md5": "^2.1.0",
     "node-sass": "^3.7.0",
     "object-assign": "^4.1.0",
     "react": "15.1.0",
@@ -49,9 +52,6 @@
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1",
-    "winston": "^2.2.0",
-    "babel-plugin-transform-class-properties": "^6.9.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-object-rest-spread": "^6.8.0"
+    "winston": "^2.2.0"
   }
 }
