--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-es2016": "^6.0.11",
     "babel-preset-react": "^6.5.0",
+    "body-parser": "^1.15.1",
     "browser-sync": "^2.12.10",
     "browser-sync-webpack-plugin": "^1.0.2",
     "bunyan": "^1.8.1",
