--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "express": "^4.13.4",
     "express-hbs": "^1.0.1",
     "extract-text-webpack-plugin": "^1.0.1",
+    "getbase": "^2.8.2",
     "handlebars": "^4.0.5",
     "history": "^3.0.0",
     "immutable": "^3.8.1",
