--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "url": ""
   },
   "scripts": {
-    "watch": "webpack -w -d"
+    "dev": "nodemon index.js --env=development",
+    "watch": "webpack -w -d --env=development",
+    "api": "node api.js"
   },
   "dependencies": {},
   "devDependencies": {
@@ -28,6 +30,7 @@
     "babel-preset-es2016": "^6.0.11",
     "babel-preset-react": "^6.5.0",
     "body-parser": "^1.15.1",
+    "bootstrap-sass": "^3.3.6",
     "browser-sync": "^2.12.10",
     "browser-sync-webpack-plugin": "^1.0.2",
     "bunyan": "^1.8.1",
@@ -37,11 +40,13 @@
     "express": "^4.13.4",
     "express-hbs": "^1.0.1",
     "extract-text-webpack-plugin": "^1.0.1",
-    "getbase": "^2.8.2",
+    "file-loader": "^0.8.5",
+    "font-awesome": "^4.6.3",
     "handlebars": "^4.0.5",
     "history": "^3.0.0",
     "immutable": "^3.8.1",
     "md5": "^2.1.0",
+    "minimist": "^1.2.0",
     "node-sass": "^3.7.0",
     "object-assign": "^4.1.0",
     "react": "15.1.0",
