--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "sass-loader": "^3.2.0",
     "serve-favicon": "^2.3.0",
     "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1",
     "winston": "^2.2.0"
