--- a/.env.js.sample
+++ b/.env.js.sample
@@ -1,5 +1,10 @@
 var config = {
 	"environmentName": "development",
+	"server": {
+		"port": 3000,
+		"host": "127.0.0.1",
+		"assetPath": "http://127.0.0.1:3000/public"
+	},
 	"services": {
 		"pinterest": {
 			"appId": "putYourAppIdHere",
