--- a/package.json
+++ b/package.json
@@ -44,12 +44,14 @@
     "handlebars": "^4.0.5",
     "history": "^3.0.0",
     "immutable": "^3.8.1",
+    "jquery": "^3.0.0",
     "md5": "^2.1.0",
     "minimist": "^1.2.0",
     "node-sass": "^3.7.0",
     "object-assign": "^4.1.0",
-    "react": "15.1.0",
-    "react-dom": "15.1.0",
+    "react": "^15.1.0",
+    "react-bootstrap": "^0.29.4",
+    "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
     "redux": "^3.5.2",
