--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "object-assign": "^4.1.0",
     "react": "^15.1.0",
     "react-bootstrap": "^0.29.4",
+    "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^15.1.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.1",
