Add Mapbox GL JS

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "handlebars": "^4.0.5",
     "history": "^3.0.0",
     "immutable": "^3.8.1",
+    "leaflet": "^0.7.7",
     "md5": "^2.1.0",
     "minimist": "^1.2.0",
     "node-sass": "^3.7.0",
