--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "watch": "webpack -w -d --env=development",
     "api": "node api.js"
   },
-  "dependencies": {},
+  "dependencies": {
+    "jimp": "^0.2.24",
+    "slug": "^0.9.1"
+  },
   "devDependencies": {
     "autoprefixer-loader": "^3.2.0",
     "axios": "^0.12.0",
