--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "dev": "nodemon index.js --env=development",
     "watch": "webpack -w -d --env=development"
   },
-  "dependencies": {},
   "devDependencies": {
     "autoprefixer-loader": "^3.2.0",
     "axios": "^0.12.0",
@@ -44,9 +43,7 @@
     "handlebars": "^4.0.5",
     "history": "^3.0.0",
     "immutable": "^3.8.1",
-    "jimp": "^0.2.24",
     "leaflet": "^0.7.7",
-    "md5": "^2.1.0",
     "minimist": "^1.2.0",
     "node-sass": "^3.7.0",
     "object-assign": "^4.1.0",
@@ -59,11 +56,16 @@
     "redux": "^3.5.2",
     "sass-loader": "^3.2.0",
     "serve-favicon": "^2.3.0",
-    "slug": "^0.9.1",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1",
     "winston": "^2.2.0"
+  },
+  "dependencies": {
+    "jimp": "^0.2.24",
+    "md5": "^2.1.0",
+    "slug": "^0.9.1",
+    "unicode": "^0.6.1"
   }
 }
