--- a/.env.js.sample
+++ b/.env.js.sample
@@ -9,6 +9,10 @@ var config = {
 		"pinterest": {
 			"appId": "putYourAppIdHere",
 			"appSecret": "putYourSecretsHere"
+		},
+		"apitude": {
+			"key": "demo",
+			"secret": "demo"
 		}
 	}
 	// See `config.js` for more options
