--- a/.env.js.sample
+++ b/.env.js.sample
@@ -3,7 +3,7 @@ var config = {
 	"server": {
 		"port": 3000,
 		"host": "127.0.0.1",
-		"assetPath": "http://127.0.0.1:3000/public"
+		"assetPath": "http://127.0.0.1:3000/assets/"
 	},
 	"services": {
 		"pinterest": {
