--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "dev": "nodemon index.js --env=development",
     "watch": "webpack -w -d --env=development"
   },
-  "devDependencies": {
+  "dependencies": {
     "autoprefixer-loader": "^3.2.0",
     "axios": "^0.12.0",
     "babel": "^6.5.2",
@@ -60,9 +60,8 @@
     "url-loader": "^0.5.7",
     "webpack": "^1.13.1",
     "webpack-dev-server": "^1.14.1",
-    "winston": "^2.2.0"
-  },
-  "dependencies": {
+    "winston": "^2.2.0",
+    "flatpickr": "^1.8.8",
     "jimp": "^0.2.24",
     "md5": "^2.1.0",
     "slug": "^0.9.1",
